--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "anderslundback.github.io",
+  "version":"0.1.0",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -22,6 +23,7 @@
     "start": "webpack-dev-server --progress --inline --hot"
   },
   "dependencies": {
+    "bulma": "^0.6.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
