--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "anderslundback.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://anderslundback.github.io",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0"
   },
