--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "react-scripts build",
-    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
+    "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
